--- a/css/style.css
+++ b/css/style.css
@@ -170,3 +170,74 @@ body{
 .info__table td{
     padding-bottom: 20px;
 }
+.track{
+    background-image: url(../images/track-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.track__inner{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.track__title{
+    padding-top: 50px;
+    padding-bottom: 30px;
+    font-weight: 300;
+    font-size: 32px;
+}
+.track__text{
+    max-width: 435px;
+}
+
+.track__img{
+    margin: auto 0px 90px auto;
+}
+
+.evo {
+}
+.evo-black {
+    background-color: #363636;
+    padding: 100px 0 50px;
+    color: #fff;
+}
+
+.evo-black__inner {
+
+}
+.evo-black__info {
+    display: flex;
+    justify-content: space-between;
+}
+.evo-black__title {
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 32px;
+    padding-right: 50px;
+}
+.evo-black__infobox {
+    flex-basis: 437px;
+}
+.evo-black__text {
+    font-size: 14px;
+}
+.evo-black__text:not(:last-child){
+    margin-bottom: 30px;
+}
+.evo-black__img {
+    display: block;
+    margin: 200px auto 60px;
+}
+.evo-__descr-list {
+}
+.evo-white {
+}
+.evo-white__inner {
+}
+.evo-white__text {
+}
+.evo-white__video {
+}
+.evo-white__video-link {
+}
